[package]
name = "mugle_miner"
version = "4.0.0"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
description = "Mining software for Mugle, supports CPU and CUDA GPUs."
build = "src/build/build.rs"
license = "Apache-2.0"
repository = "https://github.com/mugleproject/mugle-miner"
keywords = [ "crypto", "mugle", "mimblewimble", "mining"]
autobins = false

[workspace]
members = ["config", "util", "plugin"]

[features]
default = ["tui"]
opencl = ["ocl_cuckatoo", "ocl_cuckaroo"]
tui = ["cursive"]

[[bin]]
name = "mugle-miner"
path = "src/bin/mugle_miner.rs"

[dependencies]
backtrace = "0.3"
bufstream = "0.1"
native-tls = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
term = "0.6"
time = "0.1"

mugle_miner_util = { path = "./util", version = "4.0.0" }
mugle_miner_plugin = { path = "./plugin", version = "4.0.0" }
mugle_miner_config = { path = "./config", version = "4.0.0" }
#cuckoo_miner = { path = "./cuckoo-miner", version = "4.0.0" }
#use this alternative inclusion below to build cuda plugins
cuckoo_miner = { path = "./cuckoo-miner", version = "4.0.0", features = ["build-cuda-plugins"]}
ocl_cuckatoo = { path = "./ocl_cuckatoo", version = "1.0.2", optional = true}
ocl_cuckaroo = { path = "./ocl_cuckaroo", version = "1.0.2", optional = true}

[dependencies.cursive]
version = "0.14"
default-features = false
features = ["pancurses-backend"]
optional = true


[build-dependencies]
built = { version= "0.4", features = ["git2","chrono"] }
