[package]
name = "mugle_miner_plugin"
version = "4.0.0"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
repository = "https://github.com/mugleproject/mugle-miner"
description = "Device specific plugins for the mugle miner"
license = "Apache-2.0"
workspace = ".."

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
libc = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
